--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,17 @@ image:https://github.com/outsideris/citizen/workflows/Unit%20tests/badge.svg["Un
 image:https://github.com/outsideris/citizen/workflows/Integration%20Tests/badge.svg["Integration Test Status", link="https://github.com/outsideris/citizen/actions?query=workflow%3A%22Integration+Tests%22+branch%3Amain"]
 image:https://app.fossa.io/api/projects/git%2Bgithub.com%2Foutsideris%2Fcitizen.svg?type=shield["FOSSA Status", link="https://app.fossa.io/projects/git%2Bgithub.com%2Foutsideris%2Fcitizen?ref=badge_shield"]
 
+This fork is used to create the chaaz-repo version of citizen:0.6.0.
+Mostly, it overrides the ngrok download process, since the ngrok website
+certificate is incorrect, making the `postinstall` for the npm ngrok
+package impossible to run.
+
+[source, sh]
+....
+docker build -t us-west1-docker.pkg.dev/dragon-291307/chaaz/citizen:0.6.0 .
+docker push us-west1-docker.pkg.dev/dragon-291307/chaaz/citizen:0.6.0
+....
+
 A Private link:https://registry.terraform.io/[Terraform Module] and link:https://www.terraform.io/docs/internals/provider-registry-protocol.html[Terraform Provider] registry.
 
 == Requirements
